# OpenCLprojects

OpenCL_CUDA_VECTORS_ADDITION/: CMakeLists.txt  OpenCLsum.cpp  kernel.cu  vecAddKernel.cl
TEST/: CMakeLists.txt  kernel.cu
clblas/: CMakeLists.txt  cblas_test1.cpp
ne rabotaet/: CMakeLists.txt  OpenCLreduction.cpp  kernel.cu  vecReductionKernel.cl
square/: CMakeLists.txt  square.cpp
